--- a/resources/assets/sass/files/navbar.scss
+++ b/resources/assets/sass/files/navbar.scss
@@ -43,7 +43,7 @@
   color: white;
   transition: 0.5s all;
 }
-.nav-link.button-register:hover {
+.navbar-nav .nav-link.button-register:hover {
   color: #e2f1ff;
 }
 
