--- a/resources/assets/sass/files/search.scss
+++ b/resources/assets/sass/files/search.scss
@@ -504,12 +504,10 @@
   font-size: 2rem;
 }
 
-.internship-preference,
-.internship-duration {
+.embed>h5 {
   font-size: 1.2rem;
 }
-.internship-preference>.name-category ,
-.internship-duration>.name-category {
+.embed>h5>.name-category {
   color: #3a54ab;
 }
 
