Oh no... Pretty bad at CSS

--- a/resources/assets/sass/files/search.scss
+++ b/resources/assets/sass/files/search.scss
@@ -504,10 +504,10 @@
   font-size: 2rem;
 }
 
-.embed>h5 {
+.embed h5 {
   font-size: 1.2rem;
 }
-.embed>h5>.name-category {
+.embed h5>.name-category {
   color: #3a54ab;
 }
 
