--- a/resources/assets/sass/files/search.scss
+++ b/resources/assets/sass/files/search.scss
@@ -519,14 +519,13 @@
 .resume-static {
   color: white;
   display: block;
-  position: absolute;
   text-align: center;
   background: linear-gradient(to right, rgba(0,60,255,1) 0%, rgba(85,51,144,1) 100%);
-  width: 85%;
+  width: 100%;
   padding: 10px 0;
   border-radius: 40px;
-  bottom: 5%;
   transition: all 0.4s;
+  margin: 2rem 0;
 }
 
 .resume-static:hover {
