--- a/resources/assets/sass/files/search.scss
+++ b/resources/assets/sass/files/search.scss
@@ -396,7 +396,6 @@
   position: relative;
   transition: 1s all;
   padding: 1.2rem;
-  overflow-y: scroll;
 
   &.retracted {
     box-shadow: none;
@@ -404,6 +403,13 @@
 
   &.expanded {
   }
+}
+
+.infos-wrapper {
+  overflow: scroll;
+  height: 100%;
+  width: 100%;
+  padding: 1.2rem;
 }
 
 .frame-panel {
